# leafpad_fltk

./: .gitignore  Makefile  config.status  configure.ac  roadmap.md  test.txt  test_new.sh  test_open.sh  test_open_cli.sh  test_quit.sh
data/: Makefile  Makefile.am
data/icons/: Makefile
leafpad_fltk-fltk-port-undo4/: Makefile  Makefile.am  Makefile.in  config.status  test_select_all.sh
leafpad_fltk-fltk-port-undo4/autom4te.cache/: output.1  requests
leafpad_fltk-fltk-port-undo4/data/: Makefile  Makefile.in
leafpad_fltk-fltk-port-undo4/src/: Makefile  UndoManager.cpp  callback_fltk.h  leafpad  undo.c.bak  undo.cpp.bak  undo.cpp.bak3  undo.cpp_bak2  undo.h  undo.h.bak3  view_fltk.h  window_fltk.cpp
leafpad_fltk_0.1vibe/: Makefile  config.h.in  config.status  configure  test_linewrap_toggle.sh  test_select_all.sh
leafpad_fltk_0.1vibe/autom4te.cache/: requests
leafpad_fltk_0.1vibe/data/: Makefile
leafpad_fltk_0.1vibe/src/: Makefile  UndoManager.cpp  dialog_fltk.cpp  dialog_fltk.h  leafpad  main_fltk.cpp  window_fltk.cpp  window_fltk.h
leafpad_fltk_0.1vibe_wrap/: INSTALL.md  Makefile  Makefile.in  README  build_memopt.sh  config.h  config.status  font_selecta.sh  launch_wrapper.sh  less_RSS.diff  less_RSS2.diff
leafpad_fltk_0.1vibe_wrap/autom4te.cache/: output.2  requests  traces.0  traces.2
leafpad_fltk_0.1vibe_wrap/data/: Makefile
leafpad_fltk_0.1vibe_wrap/src/: Makefile  Makefile.in  (+5 more)
src/: Makefile  Makefile.am  callback_fltk.cpp  callback_fltk.h  undo.cpp  view_fltk.cpp  view_fltk.h  window_fltk.cpp  window_fltk.h
tests/: test_undo_redo.sh
(+36 files in other folders)
